# MyLittleCompiler

./: .gitignore  CMakeLists.txt  README.md  grammar.bnf  grammar.txt
include/: FileMap.h  GenAsm.h  Interpret.h  Lexer.h  Parser.h  Scanner.h  Token.h  data.h  defs.h
resources/: Sample.b
src/: Expr.cpp  Expr.h  GenAsm.cpp  Lexer.cpp  Parser.cpp  Scanner.cpp  Token.cpp  data.c  main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/test_res/: PackageDecl.b  Sample.b  Sample2.b
